# pfd

./: Cargo.toml  README.md  build.rs  package.json
.beads/: bd-change-prefix.sh  bd-rename  bd.sock.startlock  change-prefix.jq  config.yaml  issues.jsonl  issues.jsonl.2  issues.jsonl.bak
.transcript/: PLAN-prefork-democli-system.md  SUMMARY-prefork-democli.md
context/: Cargo.toml
context/src/: lib.rs
discovery/: Cargo.toml
discovery/src/: lib.rs
pfc/: Cargo.toml
pfc/src/: cli.rs  error.rs  execution.rs  lib.rs  main.rs  socket.rs  trace.rs
pfd/: Cargo.toml
pfd/src/: lib.rs  main.rs
