[package]
name = "pfc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal prefork client for execution transfer"

[[bin]]
name = "pfc"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
discovery = { path = "../discovery" }
context = { path = "../context" }
sendfd = { version = "0.4", features = ["tokio"] }
tokio.workspace = true
